# fwrule-mcp

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
src/fwrule_mcp/: __init__.py  server.py
src/fwrule_mcp/analysis/: __init__.py  address.py  classifier.py  engine.py  service.py  zone.py
src/fwrule_mcp/models/: __init__.py  common.py  normalized.py  request.py  response.py
src/fwrule_mcp/normalization/: __init__.py  implicit.py  mappers.py  normalizer.py  resolver.py  schema.py
src/fwrule_mcp/parsers/: __init__.py  base.py  registry.py
src/fwrule_mcp/results/: __init__.py  explanations.py  generator.py  remediation.py
src/fwrule_mcp/utils/: __init__.py  limits.py  validation.py
tests/: test_agent.py  test_analysis_address.py  test_analysis_engine.py  test_analysis_service.py  test_integration.py  test_mock_payloads.py  test_models_common.py  test_models_normalized.py  test_models_request.py  test_models_response.py  test_normalization.py  test_normalized_input.py  test_parsers_asa.py  test_parsers_checkpoint.py  test_parsers_ftd.py  test_parsers_juniper.py  test_parsers_panos.py
tests/fixtures/: asa_policy.conf  checkpoint_policy.json  ftd_policy.json  ios_policy.conf  iosxr_policy.conf  juniper_policy.txt  junos_policy.txt  panos_policy.xml  sros_policy.txt
tests/fixtures/candidates/: asa_conflict.conf  asa_duplicate.conf  asa_no_overlap.conf  asa_partial.conf  asa_shadowed.conf  checkpoint_conflict.json  checkpoint_duplicate.json  checkpoint_no_overlap.json  checkpoint_partial.json  checkpoint_shadowed.json  ftd_conflict.json  (+34 more)
(+21 files in other folders)
